Fix some overflowing issues in data browser component

--- a/src/app/data-browser/DataBrowser.scss
+++ b/src/app/data-browser/DataBrowser.scss
@@ -6,7 +6,6 @@ $app-bar-height: 60px;
     height: calc(100vh - #{$app-bar-height});
     width: 100vw;
     display: flex;
-    padding: 10px;
 
     li {
         list-style-type: none;
@@ -20,7 +19,7 @@ $app-bar-height: 60px;
 .data-browser__selection {
     margin: 0;
     padding: 0;
-    width: 20%;
+    width: 350px;
     z-index: 1;
     border-radius: 3px; // box-shadow: 0 0 2px #888;
 }
@@ -84,8 +83,7 @@ $app-bar-height: 60px;
 }
 
 .request-response {
-    width: 77.5%;
-    height: 97%;
+    width: 100%;
     position: relative;
     overflow-y: auto;
     display: flex;
@@ -103,6 +101,7 @@ $app-bar-height: 60px;
     border-radius: 3px;
     padding: 5px;
     white-space: pre;
+    box-sizing: border-box;
 }
 
 .response {
